--- a/lib/mina/templates/nginx.conf.template
+++ b/lib/mina/templates/nginx.conf.template
@@ -55,7 +55,6 @@ server {
     proxy_set_header Connection "Upgrade";
 <% if fetch(:nginx_use_ssl) -%>
     proxy_set_header X-Forwarded-Proto https;
-    # custom
     proxy_set_header X-Forwarded-Ssl on;
 <% else -%>
   <% if fetch(:nginx_downstream_uses_ssl) -%>
@@ -65,9 +64,9 @@ server {
   <% end -%>
 <% end -%>
 
-    # custom
     proxy_set_header X-Forwarded-Port $server_port;
     proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Request-Start "t=${msec}";
 
     proxy_pass http://puma_<%= fetch(:nginx_config_unit) %>;
     # limit_req zone=one;
